# raspberrypi-pico

pico-projects/blink/: CMakeLists.txt  autobot.sh
pico-projects/blink-led/: CMakeLists.txt  autobot.sh
pico-projects/nrf24/: .nrf24.c.swp  CMakeLists.txt  NOTES.md  autobot.sh  nrf24.c
